--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="container">
             <div class="header_container">
-                <div class="logo_img"></div>
+                <h1>Ип Цеев Асхад Довлетбиевич</h1>
                 <a href="#"> <button class="participate">Учавствовать</button></a>
             </div>
         </div>
@@ -29,8 +29,8 @@
         <div class="container">
             <div class="promoution_container">
                 <div id="text_block">
-                    <p class="text_one"><span>Учавствуй</span><br> в розыгрыше от Тинькофф <span>Camry 2021</span></p>
-                    <p class="text_two">*оформите карту, если у вас её нет, выполните простые условия</p>
+                    <p class="text_one"><span>Прими участие</span><br> в розыгрыше <span>TOYOTA CAMRY 2.0 2021!</span></p>
+                    <p class="text_two">*Выполните простые условия. Не упусти свой шанс - испытай свою удачу!</p>
                 </div>
                 <h1 class="title">Условия розыгрыша</h1>
                 <div class="feature feature1">
@@ -52,18 +52,18 @@
                 <div class="camry_img"></div>
                 <div class="conditions">
                     <div class="condition">
-                        <p>Оформите карту Тинькофф</p>
-                        <p class="text_two">Если её ещё нет</p>
+                        <p>Зарегестрируйся на сайте</p>
+                        <p class="text_two">Если ты ещё не с нами</p>
                     </div>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                     <div class="condition">
-                        <p>Приглашайте друзей оформить карту</p>
-                        <p class="text_two">Увеличивайте шансы на победу</p>
+                        <p>Дождись 1 сентября и<br> зайди в наш Инстаграм</p>
+                        <p class="text_two"><a href="https://www.instagram.com/winpresents_com/">@https://www.instagram.com/winpresents_com/</a></p>
                     </div>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                     <div class="condition">
-                        <p>Оплачивайте покупки картой</p>
-                        <p class="text_two">Больше покупок - ближе призы</p>
+                        <p>Следи за прямым эфиром</p>
+                        <p class="text_two">Может именно ты станешь победителем<br> и заберёшь 2'000'000 рублей или новую TOYOTA CAMRY 2.0 2021!</p>
                     </div>
                 </div>
             </div>
