--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camry | Tinkoff</title>
-    <link rel="icon" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="icon" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" sizes="96x96" href="img/favicon-96x96.png">
-    <link rel="android-touch-icon" type="image/png" href="img/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="img/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <title>Camry</title>
     <link href="CSS/style.css" rel="stylesheet" />
 
 </head>
@@ -29,8 +23,8 @@
         <div class="container">
             <div class="promoution_container">
                 <div id="text_block">
-                    <p class="text_one"><span>Прими участие</span><br> в розыгрыше <span>TOYOTA CAMRY 2.0 2021!</span></p>
-                    <p class="text_two">*Выполните простые условия. Не упусти свой шанс - испытай свою удачу!</p>
+                    <p class="text_one"><span>Прими участие</span><br> в розыгрыше <span>TOYOTA CAMRY 2.0 2021</span> и<br> <span>2000000р!</span></p>
+                    <p class="text_two">*Выполните простые условия - испытайте свою удачу!</p>
                 </div>
                 <h1 class="title">Условия розыгрыша</h1>
                 <div class="feature feature1">
