--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <p>Зарегистрируйся и участвуй в розыгрыше<br><span>TOYOTA CAMRY 2021!</span></p>
                         <a href="#four"> <button class="participate">Участвовать</button></a>
                     </div>
-                    <div class="logo"> <img src="img//Logo.png" width="150"></div>
+                    <div class="logo"> <img class="logo5__img-sm" src="img//Logo.png" width="150"></div>
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
                         <p class="part2">Хочешь новую<br><span>TOYOTA CAMRY 2021?</span><br>Зарегистрируйся и участвуй в розыгрыше</p>
                         <a href="#four"> <button class="participate">Хочу</button></a>
                     </div>
-                    <div class="logo"> <img src="img//Logo.png" width="150"></div>
+                    <div class="logo"> <img class="logo5__img-sm" src="img//Logo.png" width="150"></div>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
                 <div class="slide_two_container">
                     <div class="slide_two_header">
                         <div class="win">Стань обладателем</div>
-                        <div class="logo2"><img src="img//Logo.png" width="150"></div>
+                        <div class="logo2"><img class="logo5__img-sm" src="img//Logo.png" width="150"></div>
 
                     </div>
                     <div class="features_one">
@@ -60,7 +60,7 @@
                 <div class="slide_three_container">
                     <div class="slide_two_header">
                         <div class="win2">До начала розыгрыша</div>
-                        <div class="logo2"><img src="img//Logo.png" width="150"></div>
+                        <div class="logo2"><img class="logo5__img-sm" src="img//Logo.png" width="150"></div>
                     </div>
                     <div class="timer">
                         <div class="timer__items">
@@ -79,7 +79,7 @@
             <div id="four">
                 <div class="container">
                     <div class="slide_four_container">
-                        <div class="logo4"><img src="img//Logo.png" width="150"></div>
+                        <div class="logo4"><img  class="logo5__img-sm" src="img//Logo.png" width="150"></div>
                         <form method="GET" action="">
 
                             <div class="placeholder-form">
@@ -127,7 +127,7 @@
                 <div class="slide_five_container">
                     <div class="five_header">
                         <h1>FAQ</h1>
-                        <div class="logo5"><img src="img//Logo.png" width="180"></div>
+                        <div class="logo5"><img class="logo5__img" width="150px" src="img//Logo.png"></div>
                     </div>
                     <div class="FAQ">
                         <div class="questions">
